# medic-cli

./: .gitignore  README.md  pyproject.toml  test.py  test_broken.py
medic/: brain.py  cli.py  logger.py  surgeon.py
medic_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
